// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders 1`] = `
<div
  className="Badge middle infoBase"
>
  Badge
</div>
`;

exports[`should render with a wash 1`] = `
<div
  className="Badge middle washLight lightWash"
>
  Badge
</div>
`;
